--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 HF_TOKEN=your_token_here
 PHOENIX_API_KEY=your_key_here
 OLLAMA_HOST=http://localhost:11434
+GEMINI_API_KEY=your_key_here
+LANGFUSE_PUBLIC_KEY=your_key_here
+LANGFUSE_SECRET_KEY=your_key_here
